@@ -7,6 +7,7 @@ Revision history for Games-Solitaire-Verify
             - Add the data() slot.
         - lib/Games/Solitaire/Verify/State.pm :
             - Add the add_column method.
+            - Add the set_foundations() method.
 
 0.0901  Thu Jun  2 21:24:24 IDT 2011
         - Now importing Dumper from Data::Dumper properly.
